--- a/client/painel/home.html
+++ b/client/painel/home.html
@@ -16,7 +16,7 @@
     <section class="bg-menu">
         <div class="menu-left">
             <div class="logo">
-                <img src="../img/logo.png" width="100" />
+                <img class="logo-empresa" width="100" />
             </div>
             <div class="menus">
                 <a href="./home.html" class="menu-item active">
@@ -31,10 +31,10 @@
                 <a href="./configuracoes.html" class="menu-item ">
                     <i class="fas fa-cog"></i>Configurações
                 </a>
-                <a href="#" class="menu-item ">
+                <a href="./empresa.html" class="menu-item ">
                     <i class="fas fa-building"></i>Empresa
                 </a>
-                <a href="#" class="menu-item ">
+                <a href="./relatorio.html" class="menu-item ">
                     <i class="fas fa-chart-line"></i>Relatório
                 </a>
             </div>
@@ -51,10 +51,10 @@
 
                             <div class="container-right">
                                 <div class="container-dados">
-                                    <p>Pizzaria Maluca</p>
-                                    <span>pizzariamaluca@contato.com</span>
+                                    <p class="nome-empresa"></p>
+                                    <span class="email-empresa"></span>
                                 </div>
-                                <a href="#" class="btn btn-white btn-sm">
+                                <a href="#" class="btn btn-white btn-sm" onclick="app.method.logout()">
                                     <i class="fas fa-sign-out-alt"></i>&nbsp; Sair
                                 </a>
                             </div>
@@ -64,6 +64,10 @@
             </div>
         </div>
     </section>
+
+    <script type="text/javascript" src="../js/bootstrap.bundle.min.js"></script>
+    <script type="text/javascript" src="../js/app.js"></script>
+    <script type="text/javascript" src="./js/home.js"></script>
 
 </body>
 </html>
